--- a/input.css
+++ b/input.css
@@ -20,37 +20,76 @@ html,
 body {
   scroll-behavior: smooth;
 }
+
+/* Подключение шрифтов с поддержкой кириллицы */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+
 @font-face {
   font-family: "popins-black";
-  src: url("./assets/fonts/Poppins-Black.ttf");
+  src: url("./assets/fonts/Poppins-Black.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 900;
 }
 
 @font-face {
   font-family: "popins-bold";
-  src: url("./assets/fonts/Poppins-Bold.ttf");
+  src: url("./assets/fonts/Poppins-Bold.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 700;
 }
+
 @font-face {
   font-family: "popins-extrabold";
-  src: url("./assets/fonts/Poppins-ExtraBold.ttf");
+  src: url("./assets/fonts/Poppins-ExtraBold.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 800;
 }
+
 @font-face {
   font-family: "popins-extralight";
-  src: url("./assets/fonts/Poppins-ExtraLight.ttf");
+  src: url("./assets/fonts/Poppins-ExtraLight.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 200;
 }
+
 @font-face {
   font-family: "popins-medium";
-  src: url("./assets/fonts/Poppins-Medium.ttf");
+  src: url("./assets/fonts/Poppins-Medium.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 500;
 }
 
 @font-face {
   font-family: "popins-semibold";
-  src: url("./assets/fonts/Poppins-SemiBold.ttf");
+  src: url("./assets/fonts/Poppins-SemiBold.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 600;
 }
+
 @font-face {
   font-family: "popins-thin";
-  src: url("./assets/fonts/Poppins-Thin.ttf");
+  src: url("./assets/fonts/Poppins-Thin.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 100;
 }
+
 @font-face {
   font-family: "popins-regular";
-  src: url("./assets/fonts/Poppins-Regular.ttf");
+  src: url("./assets/fonts/Poppins-Regular.ttf"),
+       local("Roboto"),
+       local("Open Sans");
+  font-weight: 400;
+}
+
+/* Резервные стили для случаев, когда Poppins не загрузится */
+body {
+  font-family: "popins-regular", "Roboto", "Open Sans", sans-serif;
 }
